# docchi

./: .gitignore  Cargo.toml  changelog.txt  mit_license.txt  publish.bat  publish_temporal.bat  readme.md  readme_old.md  roadmap.md  並列化仕様.txt
docchi_archiver2/: Cargo.toml  readme.md
docchi_archiver2/src/: error.rs  lib.rs
docchi_archiver2/src/imp/: mod.rs  read_archive.rs  read_archive_data_from_directory.rs  resume_archive.rs  write_archive.rs  write_items.rs
docchi_archiver2/src/imp/structs/: archive_data.rs  archive_options.rs  archiver.rs  hash_thread.rs  mod.rs
docchi_archiver2/src/json/general/: nazofile.txt
docchi_archiver2/src/json/simple/: hoge.json5  root.json5  siyou.json5
docchi_archiver2/src/testing/: archive_general_test.rs  archive_test.rs  archive_test_old.rs  bench_convert.rs  error_test.rs  general_to_simple_test.rs  mod.rs  resume_test.rs
docchi_compaction/: Cargo.toml  license.txt  readme.md
docchi_compaction/src/: basic_compaction.rs  error.rs  kval_enum.rs  lib.rs  string_compaction.rs  仕様.txt  仕様_old.txt
docchi_compaction/src/enc_dec/: decimal_lib.rs  decode.rs  decode_from_slice.rs  encode.rs  encode_to_vec.rs  kihon_from_tag.rs  mod.rs  reader.rs  signed_bytes.rs  tag_reader.rs  tag_storage.rs  var_int.rs  writer.rs
docchi_compaction/src/testing/: mod.rs  test_enc_dec.rs  test_string_compaction.rs
docchi_compaction/src/url_string/: b8s_and_b6s.rs  char_and_b6.rs  mod.rs
docchi_core/: Cargo.toml  readme.md
docchi_core/src/: error.rs  lib.rs
docchi_core/src/imp/: mod.rs
docchi_core/src/imp/ext/: mod.rs  path_ext.rs
docchi_core/src/imp/intf/: citem.rs  clist.rs  clist_const.rs  clist_iter_const.rs  ctable_const.rs  member_desc.rs  mitem.rs  mlist_const.rs  mlist_iter_const.rs  mlist_iter_mut.rs  mlist_mut.rs  mlist_ptr.rs  mod.rs  ref_desc.rs  root.rs  table.rs
docchi_core/src/imp/json_to_rust/: array_null.rs  construct_root.rs  get_id.rs  get_old.rs  get_refs.rs  json_array_to_rust.rs  json_item_to_rust.rs  json_name.rs  json_obj_to_rust.rs  mod.rs  names.rs
docchi_core/src/imp/rust_to_json/: get_param.rs  mod.rs  name_with_suffix.rs  root_to_json.rs  rust_array_to_json.rs  rust_value_to_json_value.rs  string_set_to_json.rs
docchi_core/src/imp/structs/: array_type.rs  docchi_archive.rs  dochy_archive.rs  json_file.rs  linked_m.rs  linked_map_iter.rs  linked_map_iter_mut.rs  linked_map_unsafe_iter.rs  list_def_obj.rs  list_sab_value.rs  list_type.rs  list_value.rs  meta_table.rs  mod.rs  mut_list_def.rs  my_json.rs  null_or.rs  param_type.rs  qv.rs  ref_def_obj.rs  ref_value.rs  root_def_obj.rs  root_obj.rs  root_sab_value.rs  root_value.rs  rust_array.rs  rust_list.rs  rust_param.rs  rust_string.rs  rust_value.rs  var_type.rs
docchi_core/src/imp/version_adjuster/: adjust_mut_list.rs  adjust_mut_list_item_ref.rs  adjust_mut_list_item_sabun.rs  mod.rs  version_adjuster.rs
docchi_core/src/json_dir/: json_dir_siyou.txt
docchi_core/src/json_dir/json_siyou/: root.json5  someData.json5  someStr.json5
docchi_core/src/json_dir/subfol/: some_table.json5
docchi_core/src/old/: json_siyou_old.rs  list_idの互換性に対する考え.txt  mod.rs  objectからobjectを生やすか.txt  renameに関して.txt  なぜデフォルト値が必要なのか.txt  ロードマップ.txt
docchi_core/src/structs/: mod.rs
docchi_core/src/testing/: check_type_size.rs  initialize_performance_test.rs  json_to_rust_and_json.rs  json_with_subfo_to_rust.rs  mod.rs  test_linked_m.rs  test_version_adjuster.rs
docchi_diff/: Cargo.toml  apache_license.txt  readme.md
docchi_diff/src/: diff_error.rs  lib.rs
docchi_diff/src/imp/: apply_diff.rs  get_diff.rs  mod.rs  structs_read.rs  structs_write.rs
docchi_diff/src/imp/apply/: apply_list_diff.rs  apply_lists.rs  apply_params.rs  apply_refs.rs  apply_root_diff.rs  diff_to_new_list.rs  mod.rs  modify_item_from_diff.rs  new_item_from_diff.rs
docchi_diff/src/imp/prepare/: compare_items.rs  get_mlist_diff.rs  get_root_diff.rs  mod.rs  new_item.rs  new_list.rs
docchi_diff/src/imp/read/: get_null.rs  get_undefined.rs  mod.rs  read_list.rs  read_lists.rs  read_lists_numbers.rs  read_param.rs  read_params.rs  read_refs.rs  read_root.rs  read_store_ids.rs  (+1 more)
docchi_fs/: Cargo.toml  readme.md
docchi_fs/src/: error.rs  lib.rs
docchi_fs/src/imp/: mod.rs
docchi_fs/src/test_diff_history/: mod.rs  show_dir_contents_diff_history.rs  test_diff_his.rs
docchi_fs/src/test_fs/: copy_dir_all.rs  mod.rs  save_test.rs  show_dir_contents_fs.rs  test_fifo_thread.rs  test_hex_file_name.rs
docchi_fs/src/test_simple_history/: mod.rs  show_dir_contents_history.rs  test_cumulative_limit_count.rs  test_cumulative_limit_nth.rs  test_load_and_save.rs  test_max_phase0.rs  test_max_phase0_with_cumu.rs  test_simple_diff_files.rs
docchi_intf/: Cargo.toml  readme.md
docchi_intf/src/: error.rs  lib.rs
docchi_intf/src/imp/: generate_accessor_from_json_dir.rs  generate_interface.rs  generate_root_source.rs  mod.rs  to_member_source.rs
docchi_json5/: Cargo.toml  json5_rs_licence.txt  licence.txt  readme.md
docchi_json5/src/: de.rs  deserialize_item.rs  error.rs  json5.pest  jval.rs  lib.rs  test.rs
docchi_temporal_test/: Cargo.toml
docchi_temporal_test/src/: lib.rs  temporal_test.rs
docchi_temporal_test/src/benchan/: benchanmark.rs  mod.rs  threadpool_bench.rs
docchi_temporal_test/src/json_table_test/: root.json5
docchi_temporal_test/src/siyou/: generate_siyou.rs  mod.rs  siyou_generated.rs
docchi_test/: Cargo.toml
docchi_test/src/: lib.rs
docchi_test/src/diff/: generate_for_test_big_structure.rs  generate_for_test_list.rs  generate_for_test_params.rs  generate_for_test_ref.rs  generated_test_big_structure.rs  generated_test_list.rs  generated_test_params.rs  generated_test_ref.rs  mod.rs  test_big_structure.rs  test_list.rs  test_params.rs  test_ref.rs
docchi_test/src/fs_test/: mod.rs
(+422 files in other folders)
