[package]
name = "docchi_archiver2"
version = "0.8.0"
authors = ["juzy <dochy.ksti@gmail.com>"]
edition = "2018"

license = "MIT OR Apache-2.0"
description = "A serializer which compresses integers"
repository = "https://github.com/dochy-ksti/docchi"
readme = "readme.md"
keywords = ["archiver", "Snappy", "MetroHash"]

[dependencies]
docchi_compaction = { path="../docchi_compaction", version="0.8" }
metrohash = "1.0.6"
snap = "1.0.1"
anyhow = "1.0.34"
with_capacity_safe = "0.4"
rayon = "1.5.1"

[dev-dependencies]
once_cell = "1.9.0"