[package]
name = "docchi_compaction"
version = "0.7.3"
authors = ["juzy <dochy.ksti@gmail.com>"]
edition = "2018"

license = "MIT OR Apache-2.0"
description = "A serializer which compresses integers"
repository = "https://github.com/dochy-ksti/docchi"
readme = "readme.md"
keywords = ["serializer", "encode", "url"]

[dependencies]
bit-vec = "0.6.1"
regex = "1"
once_cell = "1.7.2"
anyhow = "1.0.34"
arrayvec = "0.5.2"
with_capacity_safe = "0.4"
