[package]
name = "docchi_core"
version = "0.8.0"
authors = ["juzy <dochy.ksti@gmail.com>"]
edition = "2018"

license = "MIT OR Apache-2.0"
description = "A statically typed data management language based on JSON5."
repository = "https://github.com/dochy-ksti/docchi"
readme = "readme.md"
keywords = ["data","language"]

[dependencies]
docchi_json5 ={ path="../docchi_json5", version="0.8" }
docchi_archiver2 = {path="../docchi_archiver2", version="0.8"}
regex = "1.3.1"

linked-hash-map = "0.5.2"
rustc-hash = "1.1.0"
anyhow = "1.0.34"
once_cell = "1.7.2"
