[package]
name = "docchi_fs"
version = "0.7.0"
authors = ["juzy <dochy.ksti@gmail.com>"]
edition = "2018"

license = "MIT OR Apache-2.0"
description = "A file system which composes chlonological diff files efficiently."
repository = "https://github.com/dochy-ksti/docchi"
readme = "readme.md"
keywords = ["data","management","file","system", "diff"]

[dependencies]
docchi_core = {path="../docchi_core", version="0.7.0" }
anyhow = "1.0.34"
docchi_archiver2 = {path="../docchi_archiver2", version="0.7.0"}
docchi_diff = {path="../docchi_diff", version="0.7.0"}
docchi_compaction = {path="../docchi_compaction", version="0.7.0" }
tempfile = "3.2.0"
rand = "0.8.3"
with_capacity_safe = "0.4.0"
once_cell = "1.7.2"
rayon = "1.5.1"
threadpool = "1.8.1"