[package]
name = "docchi_json5"
version = "0.7.0"
authors = ["juzy <dochy.ksti@gmail.com>"]
edition = "2018"

license = "MIT OR Apache-2.0"
description = "Handles customized json5 for my project"
repository = "https://github.com/dochy-ksti/docchi"
readme = "readme.md"
keywords = ["json5"]

[dependencies]
pest = "2.0"
pest_derive = "2.0"
linked-hash-map = "0.5.2"
fnv = "1.0.7"
anyhow = "1.0.34"
